--- a/style.css
+++ b/style.css
@@ -22,7 +22,10 @@ body {
 .stats-container {
     display: flex;
 }
-
+.stats-container:hover{
+    cursor:pointer;
+    box-shadow: 0 0 30px lightblue;
+}
 .stats-card {
     background-color: #a8b0bc;
     border-radius: 7px;
